Start clubs sites routing

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-NUNATAK_DOMAIN_SUFFIX=.nunatak.localhost
+NUNATAK_ROOT_DOMAIN=nunatak.localhost
 
 LOG_CHANNEL=stack
 
