Make session accessible from subdomains

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://nunatak.localhost
 
 NUNATAK_ROOT_DOMAIN=nunatak.localhost
+SESSION_DOMAIN=.nunatak.localhost
 
 LOG_CHANNEL=stack
 
