--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/welcome.css": "/css/welcome.css",
     "/css/app.css": "/css/app.css",
     "/css/site.css": "/css/site.css"
 }
