--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /node_modules
-/public/css/app.css
-/public/css/site.css
-/public/js/app.js
+/public/css/*.css
+/public/js/*.js
 /public/hot
 /public/storage
 /storage/*.key
